<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">大会速報アプリ</string>
    <string name="action_settings">Settings</string>
    <string name="str_title_main">大会速報アプリ</string>
    <string name="str_title_raceList">大会一覧</string>
    <string name="str_title_race">大会</string>
    <string name="str_title_raceentry">大会登録</string>
    <string name="str_title_runnerentry">選手登録</string>
    <string name="str_title_runnerlist">選手リスト</string>
    <string name="str_title_updatelist">速報リスト</string>
    <string name="str_title_passlist">通過情報</string>
    <string name="str_title_passlistsection">通過情報 詳細</string>
    <string name="str_title_error">エラー</string>
    <string name="str_dialog_title_race">大会登録確認</string>
    <string name="str_dialog_title_deleterace">大会削除確認</string>
    <string name="str_dialog_title_runnerentry">選手登録確認</string>
    <string name="str_dialog_title_deleterunner">選手削除確認</string>
    <string name="str_dialog_title_urldisp">URL確認</string>
    <string name="str_dialog_title_updatedetail">選手速報詳細</string>
    <string name="str_dialog_title_progress_raceinfo">大会情報</string>
    <string name="str_dialog_title_progress_runnerinfo">選手情報</string>
    <string name="str_dialog_title_progress_namesearch">名前検索</string>
    <string name="str_dialog_title_progress_manual">手動更新中</string>
    <string name="str_dialog_msg_name">大会名:</string>
    <string name="str_dialog_msg_date">開催日:</string>
    <string name="str_dialog_msg_location">開催地:</string>
    <string name="str_dialog_msg_split">スプリット　</string>
    <string name="str_dialog_msg_lap">ラップ　</string>
    <string name="str_dialog_msg_currenttime">通過時間　</string>
    <string name="str_dialog_msg_OK">登録する</string>
    <string name="str_dialog_msg_DEL">削除する</string>
    <string name="str_dialog_msg_NG">やめる</string>
    <string name="str_dialog_msg_get">取得中</string>
    <string name="str_dialog_msg_cancel">キャンセル</string>
    <string name="str_dialog_msg_close">閉じる</string>
    <string name="str_msg_default">メッセージ</string>
    <string name="str_msg_raceno">大会が登録されていません。大会を登録してください。</string>
    <string name="str_msg_racefull">これ以上大会の登録ができません。登録したいならば、大会削除を行ってください。</string>
    <string name="str_msg_runnnerno">選手が登録されていません。選手を登録してください。</string>
    <string name="str_msg_runnerfull">これ以上選手の登録ができません。登録したいならば、選手削除を行ってください。</string>
    <string name="str_msg_runnerupdateexe">速報中なので、選手登録はできません。速報を停止してから選手登録してください。</string>
    <string name="str_msg_inputName">名前で検索する場合は、名前を入力してください。</string>
    <string name="str_msg_nosearchname">選手がみつかりませんでした。</string>
    <string name="str_msg_updateno">速報情報がありません。</string>
    <string name="str_msg_passno">通過情報がありません。</string>
    <string name="str_msg_inputurl">以降のURLを入力</string>
    <string name="str_msg_inputNumber">ゼッケン番号入力してください。</string>
    <string name="str_msg_updaterunner">速報リストを更新しました。</string>
    <string name="str_msg_readqr">枠内にQRコードを表示して、画面をタッチしてください。</string>
    <string name="str_txt_defaulturl">http://update.runnet.jp/</string>
    <string name="str_txt_logo">ロゴ</string>
    <string name="str_txt_racename">大会名</string>
    <string name="str_txt_racedate">開催日</string>
    <string name="str_txt_racelocation">開催地</string>
    <string name="str_txt_runnername">選手名</string>
    <string name="str_txt_runnerinfo">選手情報</string>
    <string name="str_txt_no">ゼッケン番号</string>
    <string name="str_txt_section">部門</string>
    <string name="str_txt_section_no">部門未設定</string>
    <string name="str_txt_point">地点</string>
    <string name="str_txt_updaterunner">選手</string>
    <string name="str_txt_updatepass">通過</string>
    <string name="str_txt_updatesplit">スプリット</string>
    <string name="str_txt_updatecurrenttime">通過時間</string>
    <string name="str_txt_updateinfo">速報情報</string>
    <string name="str_txt_passdatamain">通過情報メイン</string>
    <string name="str_txt_passdatasub">通過情報サブ</string>
    <string name="str_txt_runner">選手</string>
    <string name="str_txt_split">スプリット </string>
    <string name="str_txt_lap">ラップ</string>
    <string name="str_txt_currenttime">通過時間 </string>
    <string name="str_txt_updateexe">この大会の速報中です</string>
    <string name="str_txt_updatereserve"> に速報が開始します</string>
    <string name="str_txt_updatenew">New</string>
    <string name="str_txt_dot">■</string>
    <string name="str_txt_arrow">矢印</string>
    <string name="str_txt_sei">姓</string>
    <string name="str_txt_mei">名</string>
    <string name="str_btn_entry">大会登録</string>
    <string name="str_btn_updatestart">自動更新を開始する</string>
    <string name="str_btn_updatestop">自動更新を停止する</string>
    <string name="str_btn_reservestart">自動更新を予約する</string>
    <string name="str_btn_reservecancel">自動更新予約を解除する</string>
    <string name="str_btn_manual">手動更新をする</string>
    <string name="str_btn_updatelist">速報リスト</string>
    <string name="str_btn_runnerentry">選手登録</string>
    <string name="str_btn_decide">決定</string>
    <string name="str_btn_search">検索</string>
    <string name="str_btn_back">戻る</string>
    <string name="str_btn_backqr">大会登録に戻る</string>
    <string name="str_btn_close">閉じる</string>
    <string name="str_btn_passlist">通過情報</string>
    <string name="str_btn_detail">大会詳細</string>
    <string name="str_btn_backstart">大会一覧</string>
    <string name="str_btn_qr">QRコードで検索</string>
    <string name="str_tab_race_detail">詳細</string>
    <string name="str_tab_race_runner">選手</string>
    <string name="str_tab_race_update">速報</string>
    <string name="str_tab_race_pass">地点</string>
</resources>
