<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<TextView
        android:id="@+id/id_runnerinfodetail_txt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/str_txt_no"/>

	<Button
        android:id="@+id/id_runnerinfodetail_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/str_btn_back" />
	
    <TextView
        android:id="@+id/id_runnerinfodetail_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_runnerinfodetail_txt_number"
        android:layout_below="@+id/id_runnerinfodetail_txt_number"
        android:layout_marginTop="15dp"
        android:text="@string/str_txt_runnername"/>

    <TextView
        android:id="@+id/id_runnerinfodetail_txt_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_runnerinfodetail_txt_number"
        android:layout_below="@+id/id_runnerinfodetail_txt_name"
        android:layout_marginTop="15dp"
        android:text="@string/str_txt_section"/>
    
    <TableLayout
        android:id="@+id/id_runnerinfodetail_table"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/id_runnerinfodetail_txt_section"
        android:layout_marginTop="15dp" >
        
        <TableRow>

        	<TextView
            	android:layout_width="70dp"
            	android:text="@string/str_txt_point"/>

            <TextView
                android:layout_width="80dp"
                android:text="@string/str_txt_split"
            	android:gravity="center"/>

            <TextView
                android:layout_width="80dp"
                android:text="@string/str_txt_lap"
            	android:gravity="center"/>

            <TextView
                android:layout_width="80dp"
                android:text="@string/str_txt_currenttime"
            	android:gravity="center"/>

        </TableRow>
    </TableLayout>

</RelativeLayout>
