<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_racedetail_txt_racename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/str_txt_racename"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/id_racedetail_txt_racedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_racedetail_txt_racename"
        android:layout_below="@+id/id_racedetail_txt_racename"
        android:layout_marginTop="10dp"
        android:text="@string/str_txt_racedate" />

    <TextView
        android:id="@+id/id_racedetail_txt_racelocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_racedetail_txt_racename"
        android:layout_below="@+id/id_racedetail_txt_racedate"
        android:layout_marginTop="10dp"
        android:text="@string/str_txt_racelocation" />

    <Button
        android:id="@+id/id_racedetail_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_btn_back" />

    <Button
        android:id="@+id/id_racedetail_btn_updatestartstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_racedetail_txt_racename"
        android:layout_below="@+id/id_racedetail_txt_racelocation"
        android:layout_marginTop="20dp"
        android:text="@string/str_btn_updatestart" />

    <Button
        android:id="@+id/id_racedetail_btn_updatelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id_racedetail_btn_updatestartstop"
        android:layout_alignBottom="@+id/id_racedetail_btn_updatestartstop"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/id_racedetail_btn_updatestartstop"
        android:text="@string/str_btn_updatelist" />
    
    <TextView
        android:id="@+id/id_racedetail_txt_runnerlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_racedetail_txt_racename"
        android:layout_below="@+id/id_racedetail_btn_updatelist"
        android:layout_marginTop="30dp"
        android:text="@string/str_txt_runnername"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/id_racedetail_listview_runner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_racedetail_txt_racename"
        android:layout_below="@+id/id_racedetail_txt_runnerlist"
        android:layout_marginTop="30dp" >

    </ListView>
    
	<Button
        android:id="@+id/id_racedetail_btn_runnerentry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_racedetail_txt_racename"
        android:layout_below="@+id/id_racedetail_listview_runner"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/str_btn_runnerentry" />

</RelativeLayout>
