<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_item_updatedata_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_item_updatedata_dot_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:text="@string/str_txt_dot"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/accentColor" />

    <TextView
        android:id="@+id/id_item_updatedata_runner_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/id_item_updatedata_dot_textview"
        android:text="@string/str_txt_updaterunner"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/id_item_updatedata_pass_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_item_updatedata_runner_textview"
        android:layout_below="@+id/id_item_updatedata_runner_textview"
        android:text="@string/str_txt_updatepass"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/id_item_updatedata_split_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_item_updatedata_pass_textview"
        android:layout_below="@+id/id_item_updatedata_pass_textview"
        android:layout_marginLeft="5dp"
        android:text="@string/str_txt_updatesplit" />
    
    <TextView
        android:id="@+id/id_item_updatedata_currenttime_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_item_updatedata_split_textview"
        android:layout_below="@+id/id_item_updatedata_split_textview"
        android:text="@string/str_txt_updatecurrenttime" />

    <TextView
        android:id="@+id/id_item_updatedata_updatenuew_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/id_item_updatedata_currenttime_textview"
        android:layout_alignParentRight="true"
        android:text="@string/str_txt_updatenew"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red"
        android:visibility="invisible" />

</RelativeLayout>
