<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_runnerinfo_txt_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_runnerinfo_txt_section"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/str_txt_no" />

    <TextView
        android:id="@+id/id_runnerinfo_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/id_runnerinfo_txt_no"
        android:text="@string/str_txt_runnername" />

    <TextView
        android:id="@+id/id_runnerinfo_txt_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/id_runnerinfo_txt_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/str_txt_section" />

</RelativeLayout>
