<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/id_raceentry_relative_header"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

    	<TextView
    	    android:id="@+id/id_raceentry_txt_title"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerVertical="true"
    	    android:layout_marginLeft="20dp"
    	    android:text="@string/str_title_raceentry"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />

    	<Button
    	    android:id="@+id/id_raceentry_btn_back"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentBottom="true"
    	    android:layout_alignParentRight="true"
    	    android:text="@string/str_btn_back" />

	</RelativeLayout>
	<RelativeLayout
        android:id="@+id/id_raceentry_relative_border"
        android:layout_width="match_parent"
        android:layout_height="5dp" >
    </RelativeLayout>
    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" >
    
    <EditText
        android:id="@+id/id_raceentry_edit_inputurl"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_raceentry_txt_inputurl"
        android:layout_below="@+id/id_raceentry_txt_inputurl"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/id_raceentry_txt_inputurl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_txt_defaulturl" />

    <TextView
        android:id="@+id/id_raceentry_txt_inputurl_aft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_raceentry_edit_inputurl"
        android:layout_toRightOf="@+id/id_raceentry_txt_inputurl"
        android:text="@string/str_msg_inputurl" />

    <Button
        android:id="@+id/id_raceentry_btn_decide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id_raceentry_edit_inputurl"
        android:layout_alignBottom="@+id/id_raceentry_edit_inputurl"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/str_btn_decide" />

</RelativeLayout>
</LinearLayout>

