<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_item_pass_point_runner_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/id_item_pass_point_runner_section_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:background="#af59e2"
       	android:padding="2dp" >
       	
        <TextView
        	android:id="@+id/id_item_pass_point_runner_section_textview"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	android:layout_marginLeft="5dp"
        	android:text="@string/str_txt_section"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/id_item_pass_point_runner_point_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:background="@color/maincolor"
       	android:padding="2dp" >
       	
        <TextView
        	android:id="@+id/id_item_pass_point_runner_point_textview"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	android:layout_marginLeft="5dp"
        	android:text="@string/str_txt_point"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_item_pass_point_runner_runner_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <TextView
        	android:id="@+id/id_item_pass_point_runner_runner_dot_textview"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	android:text="@string/str_txt_dot"
        	android:layout_marginLeft="5dp"
        	android:textColor="@color/accentColor" />
        
        <TextView
        	android:id="@+id/id_item_pass_point_runner_runner_name_textview"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
    	    android:layout_toRightOf="@+id/id_item_pass_point_runner_runner_dot_textview"
        	android:layout_marginLeft="5dp"
        	android:text="@string/str_txt_runner"/>

    	<TextView
    	    android:id="@+id/id_item_pass_point_runner_runner_split_textview"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/id_item_pass_point_runner_runner_name_textview"
    	    android:layout_below="@+id/id_item_pass_point_runner_runner_name_textview"
        	android:layout_marginLeft="5dp"
    	    android:text="@string/str_txt_split" />

    	<TextView
       		android:id="@+id/id_item_pass_point_runner_runner_updatenew_textview"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
        	android:layout_alignParentTop="true"
        	android:layout_marginRight="22dp"
        	android:text="@string/str_txt_updatenew"
        	android:textColor="@color/red"
        	android:textStyle="italic"
        	android:visibility="invisible"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
    
</LinearLayout>
