<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_activity_runnerentry_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_activity_runnerentry_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/str_title_runnerentry"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/id_activity_runnerentry_back_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_btn_back" />
 
    <TextView
        android:id="@+id/id_activity_runnerentry_inputNumber_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_activity_runnerentry_title_textview"
        android:layout_below="@+id/id_activity_runnerentry_back_button"
        android:layout_marginTop="10dp"
        android:text="@string/str_msg_inputNumber" />

    <EditText
        android:id="@+id/id_activity_runnerentry_number_edittext"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/id_activity_runnerentry_inputNumber_textview"
        android:layout_below="@+id/id_activity_runnerentry_inputNumber_textview"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:ems="5"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/id_activity_runnerentry_decide_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/id_activity_runnerentry_number_edittext"
        android:layout_toRightOf="@+id/id_activity_runnerentry_number_edittext"
        android:layout_marginLeft="20dp"
        android:text="@string/str_btn_decide" />

</RelativeLayout>
