<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_passlistsection_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_title_passlistsection"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/id_passlistsection_txt_racename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_passlistsection_txt_title"
        android:layout_below="@+id/id_passlistsection_txt_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/str_txt_racename" />

    <TextView
        android:id="@+id/id_passlistsection_txt_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_passlistsection_txt_racename"
        android:layout_below="@+id/id_passlistsection_txt_racename"
        android:layout_marginTop="10dp"
        android:text="@string/str_txt_section" />

    <ListView
        android:id="@+id/id_passlistsection_listview_sectionlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_passlistsection_txt_section"
        android:layout_below="@+id/id_passlistsection_txt_section"
        android:layout_marginTop="20dp" >
    </ListView>
</RelativeLayout>
